<resources>
    <string name="app_name">Assignment03</string>
    <string name="welcome">Welcome !!</string>
    <string name="start">Start</string>
    <string name="name">Name:</string>
    <string name="identification_info">Identification Info</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="role">Role:</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="other">Other</string>
    <string name="next">Next</string>
    <string name="education">Education:</string>
    <string name="demographic_info">Demographic Info</string>
    <string name="not_a">N/A</string>
    <string name="marital_status">Marital Status</string>
    <string name="living_status">Living Status:</string>
    <string name="income">Income:</string>
    <string name="select">Select</string>
    <string name="selectEducationLevel">Select Education Level</string>
    <string name="highest_degree">What is the highest degree or level of education you have completed?</string>
    <string name="below_high_school">Below High School</string>
    <string name="high_school">High School</string>
    <string name="bachelor_degree">Bachelor\'s Degree</string>
    <string name="master_degree">Master\'s Degree</string>
    <string name="phd_or_higher">Ph.D. or higher</string>
    <string name="trade_school">Trade School</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="select_living_status">Select Living Status</string>
    <string name="living_status_question">Which of the following describes your living status?</string>
    <string name="homeowner">Homeowner</string>
    <string name="marital_status_question">What is your marital status?</string>
    <string name="not_married">Not Married</string>
    <string name="married">Married</string>
    <string name="perfer_not_to_say">Perfer not to say</string>
    <string name="renter">Renter</string>
    <string name="lessee">Lessee</string>
    <string name="houseHold">Househole Income</string>
    <string name="seek_value"><![CDATA[$50K to <$100K]]></string>
    <string name="profile">Profile</string>
</resources>