<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demographicInfo">

    <TextView
        android:id="@+id/textViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demographic_info"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/education"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDemo" />

    <TextView
        android:id="@+id/textViewEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/not_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/marital_status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textViewEducation"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMS"
        app:layout_constraintEnd_toEndOf="@+id/buttonEducation"
        app:layout_constraintTop_toTopOf="@+id/textViewMS"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/buttonEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/select"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEducation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewEducation"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/living_status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewLS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textViewMS"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonLS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLS"
        app:layout_constraintEnd_toEndOf="@+id/buttonMS"
        app:layout_constraintTop_toTopOf="@+id/textViewLS"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/income"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewIncome"
        app:layout_constraintEnd_toEndOf="@+id/buttonLS"
        app:layout_constraintTop_toTopOf="@+id/textViewIncome" />

    <TextView
        android:id="@+id/textViewIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textViewLS"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/buttonDemoNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>